--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,17 +6,9 @@ on:
 name: Test Across Matrix
 
 jobs:
-  test:
-    ## We want to define a strategy for our job
-    strategy:
-      ## this will contain a matrix of all of the combinations
-      ## we wish to test again:
-      matrix:
-        go-version: [1.12.x, 1.13.x, 1.14.x, 1.15.x, 1.16.x, 1.17.x, 1.18.x]
-        platform: [ubuntu-latest, macos-latest, windows-latest]
-    
+  test:    
     ## Defines the platform for each test run
-    runs-on: ${{ matrix.platform }}
+    runs-on: 1.22.x
     
     ## the steps that will be run through for each version and platform
     ## combination
