--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ name: integration
 jobs:
   test:    
     ## Defines the platform for each test run
-    runs-on: 1.22.x
+    runs-on: ubuntu-latest
     
     ## the steps that will be run through for each version and platform
     ## combination
@@ -17,7 +17,7 @@ jobs:
     - name: Install Go
       uses: actions/setup-go@v2
       with:
-        go-version: ${{ matrix.go-version }}
+        go-version: 1.22.x
 
     ## checks out our code locally so we can work with the files
     - name: Checkout code
